# Demo-Repo

Eigen-QP/: CMakeLists.txt
Eigen-QP/src/: st_liner_qp.cpp
ceres-least-square/: CMakeLists.txt
ceres-least-square/include/: least_square.hpp
ceres-least-square/src/: least-square.cpp
nanoflann-test/include/: nanoflann.hpp  utils.h
nanoflann-test/src/: CMakeLists.txt  nanoflann_dynamic  nanoflann_dynamic.cpp  nanoflann_simple  nanoflann_simple.cpp
